build: Support mescc-tools 0.5.2.
* configure: Remove version check for mescc-tools.
Check for stage0 architecture flag type.
* configure.sh: Likewise.
* build-aux/build-scaffold.sh: Add stage0 flag type indirection.
* module/mescc/mescc.scm (arch-get-architecture): Likewise.

--- a/build-aux/build.sh.in
+++ b/build-aux/build.sh.in
@@ -116,7 +116,7 @@ fi
     LDFLAGS=
     ${SHELL} ${srcdest}build-aux/build-lib.sh
     ${SHELL} ${srcdest}build-aux/build-source-lib.sh
-    if bootstrap; then
+    if $bootstrap; then
         ${SHELL} ${srcdest}build-aux/build-mes.sh
     fi
 )
