--- a/build-aux/bootstrap.sh.in
+++ b/build-aux/bootstrap.sh.in
@@ -50,7 +50,7 @@ cp crt1.s $mes_cpu-mes
 objects=
 for c in $libc_mini_SOURCES; do
     o=$(basename $c .c).o
-    if test ${srcdest}$c -nt $o; then
+    if test ! -e $o -o ${srcdest}$c -nt $o; then
         echo "  CC       $c"
         $CC -c $AM_CPPFLAGS $CPPFLAGS $AM_CFLAGS $CFLAGS ${srcdest}$c
     fi
@@ -62,7 +62,7 @@ $AR crD $mes_cpu-mes/libc-mini.a $objects
 objects=
 for c in $libc_SOURCES; do
     o=$(basename $c .c).o
-    if test ${srcdest}$c -nt $o; then
+    if test ! -e $o -o ${srcdest}$c -nt $o; then
         echo "  CC       $c"
         $CC -c $AM_CPPFLAGS $CPPFLAGS $AM_CFLAGS $CFLAGS ${srcdest}$c
     fi
@@ -74,7 +74,7 @@ $AR crD $mes_cpu-mes/libc.a $objects
 objects=
 for c in $libc_tcc_SOURCES; do
     o=$(basename $c .c).o
-    if test ${srcdest}$c -nt $o; then
+    if test ! -e $o -o ${srcdest}$c -nt $o; then
         echo "  CC       $c"
         $CC -c $AM_CPPFLAGS $CPPFLAGS $AM_CFLAGS $CFLAGS ${srcdest}$c
     fi
@@ -90,7 +90,7 @@ CPPFLAGS="-D HAVE_CONFIG_H=1 -I ${srcdest}include -I ${srcdest}include/$mes_kern
 objects=
 for c in $mes_SOURCES; do
     o=$(basename $c .c).o
-    if test ${srcdest}$c -nt $o; then
+    if test ! -e $o -o ${srcdest}$c -nt $o; then
         echo "  CC       $c"
         $CC -c $AM_CPPFLAGS $CPPFLAGS $AM_CFLAGS $CFLAGS ${srcdest}$c
     fi
