build: Have configure respect GUILE_LOAD_PATH for mes to find Nyacc.
* configure: Substitute GUILE_LOAD_PATH from %load-path.
* configure.sh: Likewise.
* build-aux/config.make.in: Add GUILE_LOAD_PATH as subtitution variable.
* build-aux/config.sh.in: Likewise.
* mes/module/mes/guile.mes (%load-path): New variable.

--- a/build-aux/config.sh.in
+++ b/build-aux/config.sh.in
@@ -29,6 +29,7 @@ GIT="@GIT@"
 GUILD="@GUILD@"
 GUILE="@GUILE@"
 GUILE_EFFECTIVE_VERSION="@GUILE_EFFECTIVE_VERSION@"
+GUILE_LOAD_PATH="@GUILE_LOAD_PATH@"
 GUIX="@GUIX@"
 HELP2MAN="@HELP2MAN@"
 HEX2="@HEX2@"
