--- a/build-aux/config.make.in
+++ b/build-aux/config.make.in
@@ -28,6 +28,7 @@ GIT:=@GIT@
 GUILD:=@GUILD@
 GUILE:=@GUILE@
 GUILE_EFFECTIVE_VERSION:=@GUILE_EFFECTIVE_VERSION@
+GUILE_LOAD_PATH:=@GUILE_LOAD_PATH@
 GUIX:=@GUIX@
 HELP2MAN:=@HELP2MAN@
 HEX2:=@HEX2@
