--- a/build-aux/build.sh.in
+++ b/build-aux/build.sh.in
@@ -97,7 +97,7 @@ fi
 -I ${srcdest}include
 -I ${srcdest}include/$mes_kernel/$mes_cpu
 "
-    if test "$compiler" != bootstrap; then
+    if test $compiler = gcc; then
         ${SHELL} ${srcdest}build-aux/build-mes.sh
     fi
 )
@@ -108,13 +108,16 @@ fi
     cd mescc-lib
     sed -i s,mes_libc=system,mes_libc=mes, config.sh
     mkdir -p include/mes
-    cp -p ../include/mes/config.h include/mes/config.h
+    cp ../include/mes/config.h include/mes/config.h
     sed -i 's,#define SYSTEM_LIBC 1,#undef SYSTEM_LIBC,' include/mes/config.h
     if test -z "$srcdest"; then
         srcdest=../
         srcdir=../
     fi
-        AM_CPPFLAGS="
+    ln -sf ${srcdest}mes .
+    ln -sf ${srcdest}module .
+    ln -sf ${srcdest}src .
+    AM_CPPFLAGS="
 -D HAVE_CONFIG_H=1
 -I ${srcdest}lib
 -I include
@@ -122,8 +125,8 @@ fi
 -I ${srcdest}include/$mes_kernel/$mes_cpu
 "
     compiler=mescc
-    AR="${srcdest}pre-inst-env mesar"
-    CC="${srcdest}pre-inst-env mescc -m $mes_bits"
+    AR=${MESAR-"${srcdest}pre-inst-env mesar"}
+    CC=${MESCC-"${srcdest}pre-inst-env mescc -m $mes_bits"}
     # No user overrides for MesCC, they are probably intended for GCC
     CFLAGS=
     CPPFLAGS=
