Support and pass "-marm".
* build-aux/cflags.sh,
build-aux/check.sh.in: Pass "-marm" for ARM.
* module/mescc/mescc.scm: Accept it.

--- a/build-aux/check.sh.in
+++ b/build-aux/check.sh.in
@@ -35,6 +35,9 @@ if $courageous; then
 fi
 
 CFLAGS=
+if test $mes_cpu = arm; then
+    CFLAGS="-marm"
+fi
 if test $mes_libc = mes; then
     CFLAGS="${CFLAGS}
 -static
