--- a/scripts/mescc.in
+++ b/scripts/mescc.in
@@ -37,6 +37,11 @@ export MES_PREFIX
 GUILE_LOAD_PATH=@guile_site_dir@${GUILE_LOAD_PATH+:}${GUILE_LOAD_PATH}
 export GUILE_LOAD_PATH
 
+if test -n "$MES_UNINSTALLED"; then
+    includedir=${includedir-${abs_top_srcdir}/include}
+    libdir=${libdir-${abs_top_builddir}/lib}
+fi
+
 MES=${MES-@prefix@/bin/mes}
 bindir=${bindir-@bindir@}
 includedir=${includedir-@includedir@}
