configure: Use GUILD_OPTIMIZE=-O1 for Guile-3.
* configure (main): Set guild_optimize to "-O1" for Guile-3.
* build-aux/config.make.in (GUILD_OPTIMIZE): New variable.
* build-aux/export.make (GUILD_OPTIMIZE): Export if set.
* build-aux/config.sh.in (GUILD_OPTIMIZE): New variable.
* build-aux/build-guile.sh: Use it.

--- a/build-aux/config.make.in
+++ b/build-aux/config.make.in
@@ -26,6 +26,7 @@ DIFF:=@DIFF@
 DOT:=@DOT@
 GIT:=@GIT@
 GUILD:=@GUILD@
+GUILD_OPTIMIZE:=@GUILD_OPTIMIZE@
 GUILE:=@GUILE@
 GUILE_EFFECTIVE_VERSION:=@GUILE_EFFECTIVE_VERSION@
 GUILE_LOAD_PATH:=@GUILE_LOAD_PATH@
