--- a/build-aux/config.sh.in
+++ b/build-aux/config.sh.in
@@ -27,6 +27,7 @@ DIFF=${DIFF-@DIFF@}
 DOT="@DOT@"
 GIT="@GIT@"
 GUILD="@GUILD@"
+GUILD_OPTIMIZE="${GUILD_OPTIMIZE-@GUILD_OPTIMIZE@}"
 GUILE="@GUILE@"
 GUILE_EFFECTIVE_VERSION="@GUILE_EFFECTIVE_VERSION@"
 GUILE_LOAD_PATH="@GUILE_LOAD_PATH@"
